5.1.0:
- New: another sandy Pixel 6 wallpaper
- New: Danish and Hebrew translations
- New: additional blue (new default) and purple app themes
- Improved: random wallpaper option
- Improved: app theme selection and app colors
- Improved: dynamic colors in app icon (Android 12+)
- Improved: bold text now correctly styled even if system font is used as fallback (Chinese, Hebrew and Uyghur)
- Improved: automatic Google Drive backup of current preferences disabled (not helpful when switching to a new phone and annoying when reinstalling the app)
- Improved: disabled options in parallax section now greyed out
- Fixed: unchanged text contrast when switching dark mode inside an app
- Fixed: wrong animation on Android 12 when app theme or language were changed
- Fixed: hopefully some crashes

Please consider translating this app into your language at Transifex. There are only 117 strings to translate!

5.0.2:
- New: Dutch, Indonesian & Italian translations
- Fixed: potential crashes and bugs

5.0.1:
- Fixed: crash caused by compiler
- Fixed: crash caused by previously stored preferences

5.0.0:
- New: complete implementation of Material Design 3
- New: dynamic colors in Doodle settings app for supported devices with Android 12+ (Material You)
- New: various app color themes for devices without dynamic color support
- New: option to change language (translated by amazing volunteers on Transifex, thank you all!)
- New: another exclusive live wallpaper based on Pixel 6 wallpapers (still more to come!)
- New: option for random wallpaper design every time the display is turned off
- New: customizable extracted wallpaper colors for devices with dynamic color support
- Improved: changed settings are applied to the running wallpaper instantly
- Improved: restart behavior for applying certain settings
- Improved: splash screen implementation for Android 12+
- Fixed: broken buttons in feedback dialog

4.2.0:
- New: exclusive live wallpapers based on leaked Pixel 6 wallpapers