@@ -5,11 +5,12 @@
 - Improved: random wallpaper option
 - Improved: app theme selection and app colors
 - Improved: dynamic colors in app icon (Android 12+)
+- Improved: splash screen on Android 12+
 - Improved: bold text now correctly styled even if system font is used as fallback (Chinese, Hebrew and Uyghur)
 - Improved: automatic Google Drive backup of current preferences disabled (not helpful when switching to a new phone and annoying when reinstalling the app)
 - Improved: disabled options in parallax section now greyed out
 - Fixed: unchanged text contrast when switching dark mode inside an app
-- Fixed: wrong animation on Android 12 when app theme or language were changed
+- Fixed: wrong animation on Android 12+ when app theme or language were changed
 - Fixed: hopefully some crashes
 
 Please consider translating this app into your language at Transifex. There are only 117 strings to translate!
